css/default/_pagination.scss
@import "../base";
@import "variables";

@include block(pagination) {
  @include element(item) {
    /* pagination item */
    @include modifier(disabled) {
      /* disabled pagination item */
      visibility: hidden;
    }
  }
  @include element(item-first) {
    /* first pagination item */
  }
  @include element(item-previous) {
    /* previous pagination item */
  }
  @include element(item-page) {
    /* page */
    @include modifier(active) {
      /* active page */
    }
  }
  @include element(item-next) {
    /* next pagination item */
  }
  @include element(item-last) {
    /* last pagination item */
  }
}

